samples/_failures_safe/1761291751_80a5d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1ab7a545.c: In function ‘main’:
./samples/SAFE/__tmp_1ab7a545.c:147:15: error: expected ‘;’ at end of input
  147 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_1ab7a545.c:147:9: error: expected declaration or statement at end of input
  147 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_1ab7a545.c:147:9: error: expected declaration or statement at end of input
